--- a/WikiLeaks/Dialogs/HighlightDialog.xaml
+++ b/WikiLeaks/Dialogs/HighlightDialog.xaml
@@ -5,12 +5,11 @@
       	xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
       	xmlns:viewModels="clr-namespace:WikiLeaks.ViewModels"
       	xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit"
-      	xmlns:models="clr-namespace:WikiLeaks.Models"
       	mc:Ignorable="d" 
         Title="Highlighted Keywords"
         WindowStartupLocation="CenterScreen"
-        Height="537.712" 
-        Width="919.64"
+        Height="537" 
+        Width="550"
         FontSize="16"
         d:DataContext ="{d:DesignInstance {x:Type viewModels:HighlightViewModel}, IsDesignTimeCreatable=True}"  
         >
@@ -25,6 +24,10 @@
             <Setter Property="FontSize" Value="28" />
         </Style>
         <Style TargetType="Label">
+            <Setter Property="FontWeight" Value="Bold" />
+            <Setter Property="FontSize" Value="20" />
+        </Style>
+        <Style TargetType="CheckBox">
             <Setter Property="FontWeight" Value="Bold" />
             <Setter Property="FontSize" Value="20" />
         </Style>
@@ -52,16 +55,48 @@
                 <RowDefinition Height="*" />
                 <RowDefinition Height="Auto" />
             </Grid.RowDefinitions>
-            <xctk:CollectionControl FontWeight="Bold" FontSize="18" ItemsSource="{Binding Highlights}" >
-                
-            </xctk:CollectionControl>
-            <Grid Grid.Row="1" HorizontalAlignment="Right">
+            <GroupBox Grid.Column="0" Header="Highlighted Words" >
+                <Grid>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="*"/>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="Auto"/>
+                    </Grid.RowDefinitions>
+                    <Label Grid.Row="0" Content="Warning: Search terms may break HTML formatting." FontSize="12" FontWeight="Normal"/>
+                    <ListBox Grid.Row="1" ItemsSource="{Binding SearchTerms}" SelectedItem="{Binding SelectedSearchTerm}" IsSynchronizedWithCurrentItem="True" FontSize="14"/>
+
+                    <Grid Grid.Row="2">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="2*"/>
+                            <ColumnDefinition Width="1*"/>
+                        </Grid.ColumnDefinitions>
+
+                        <TextBox Text="{Binding SearchTerm}" Grid.Column="0" />
+                        <Button Content="Add" Command="{Binding AddTerm}" Grid.Column="1" FontSize="16" />
+                    </Grid>
+
+                    <Grid Grid.Row="4">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition/>
+                            <ColumnDefinition/>
+                        </Grid.ColumnDefinitions>
+                        <Button Content="Reset" Command="{Binding ResetTerms}" Grid.Column="0" FontSize="16" />
+                        <Button Content="Delete" Command="{Binding RemoveTerm}" Grid.Column="1" FontSize="16" />
+                    </Grid>
+                </Grid>
+            </GroupBox>
+
+            <Grid Grid.Row="1">
                 <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="*" />
                     <ColumnDefinition Width="100" />
                     <ColumnDefinition Width="100" />
                 </Grid.ColumnDefinitions>
-                <Button Content="Ok" IsDefault="True" Grid.Column="0" Command="{Binding SaveChanges}"/>
-                <Button Content="Cancel" IsCancel="True" Grid.Column="1"/>
+                <CheckBox Grid.Column="0" Content="Enable Highlighting" FontSize="14" IsChecked="{Binding WillHighlight}" VerticalContentAlignment="Center" HorizontalContentAlignment="Left"/>
+                <Button Content="Ok" IsDefault="True" Grid.Column="1" Command="{Binding SaveChanges}"/>
+                <Button Content="Cancel" IsCancel="True" Grid.Column="2"/>
             </Grid>
 
         </Grid>
