--- a/WikiLeaks/MainWindow.xaml
+++ b/WikiLeaks/MainWindow.xaml
@@ -24,6 +24,7 @@
         <Image x:Key="Refresh" Source="Resources/Refresh-50.png" />
         <Image x:Key="Wikileaks" Source="Resources/Wikileaks.png" />
         <Image x:Key="Settings" Source="Resources/Settings-48.png" />
+        <Image x:Key="Highlight" Source="Resources/Highlight.png" />
         <converters:SignatureValidationToColorConverter x:Key="SignatureValidationToColorConverter" />
     </Window.Resources>
 
@@ -121,6 +122,7 @@
                 <ColumnDefinition Width="48"/>
                 <ColumnDefinition Width="48"/>
                 <ColumnDefinition Width="48"/>
+                <ColumnDefinition Width="48"/>
             </Grid.ColumnDefinitions>
 
             <Grid.Resources>
@@ -133,10 +135,11 @@
             <TextBox Grid.Column="0" Height="48" IsReadOnly="True" FontSize="18" Text="{Binding Mode=OneWay, Path=Url}" FontWeight="Bold" VerticalContentAlignment="Center" Background="{Binding SignatureValidation, Converter={StaticResource SignatureValidationToColorConverter}}" />
             <xctk:IntegerUpDown Grid.Column="2" FontSize="18" FontWeight="Bold" Value="{Binding DocumentNo}" Padding="2" Margin="2" />
             <Button Grid.Column="3" Content="{StaticResource Wikileaks}" Command="{Binding WikileaksCommand}" />
-            <Button Grid.Column="4" Content="{StaticResource Settings}" Command="{Binding SettingsCommand}" />
-            <Button Grid.Column="5" Content="{StaticResource Refresh}" Command="{Binding RefreshCommand}" />
-            <Button Grid.Column="6" Content="{StaticResource Prev}" Command="{Binding PreviousCommand}" />
-            <Button Grid.Column="7" Content="{StaticResource Next}" Command="{Binding NextCommand}" />
+            <Button Grid.Column="4" Content="{StaticResource Highlight}" Command="{Binding HighlightCommand}" />
+            <Button Grid.Column="5" Content="{StaticResource Settings}" Command="{Binding SettingsCommand}" />
+            <Button Grid.Column="6" Content="{StaticResource Refresh}" Command="{Binding RefreshCommand}" />
+            <Button Grid.Column="7" Content="{StaticResource Prev}" Command="{Binding PreviousCommand}" />
+            <Button Grid.Column="8" Content="{StaticResource Next}" Command="{Binding NextCommand}" />
         </Grid>
     </Grid>
 </Window>
